[gd_scene load_steps=12 format=2]

[ext_resource path="res://portal.gd" type="Script" id=1]
[ext_resource path="res://portal.shader" type="Shader" id=2]
[ext_resource path="res://textures/portal_mask.png" type="Texture" id=3]

[sub_resource type="Shader" id=8]
code = "shader_type spatial;

uniform vec3 portal_plane;
uniform float portal_plane_dist;


bool is_behind_plane(vec4 pos) {
	return portal_plane.x * pos.x
			+ portal_plane.y * pos.y
			+ portal_plane.z * pos.z
			+ portal_plane_dist > 0.0f;
}


void fragment() {
	if (is_behind_plane(CAMERA_MATRIX * vec4(VERTEX, 1.0))) {
		discard;
	}
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/portal_plane = null
shader_param/portal_plane_dist = null

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.260359, 0.077369, 0.591809 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 1, 2 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/distance_factor = 1.0
shader_param/scale = 0.766
shader_param/camera_texture = SubResource( 3 )
shader_param/portal_mask = ExtResource( 3 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 0.1, 0.1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.854112, 0.812395, 0.728999 )

[node name="Portal" type="Area"]
collision_layer = 0
collision_mask = 4101
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
clip_shader = SubResource( 9 )

[node name="PortalCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -9.12812e-09, 0.0560279 )
shape = SubResource( 6 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1920, 1080 )
msaa = 1
hdr = false
keep_3d_linear = true
render_target_clear_mode = 2
render_target_update_mode = 3
shadow_atlas_size = 2

[node name="Camera" type="Camera" parent="Viewport"]
cull_mask = 1048571
fov = 85.0

[node name="Surface" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="ExitPoint" type="Spatial" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )

[node name="Boundary" type="StaticBody" parent="."]
collision_layer = 2048
collision_mask = 5

[node name="Bottom" type="CollisionShape" parent="Boundary"]
transform = Transform( 1, 0, -7.45058e-08, 0, 1, 0, 7.45058e-08, 0, 1, 0, -1.1, -0.1 )
shape = SubResource( 5 )

[node name="Top" type="CollisionShape" parent="Boundary"]
transform = Transform( 1, 0, -7.45058e-08, 0, 1, 0, 7.45058e-08, 0, 1, 0, 1.1, -0.1 )
shape = SubResource( 5 )

[node name="Left" type="CollisionShape" parent="Boundary"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, -0.6, 0, -0.1 )
shape = SubResource( 5 )

[node name="Right" type="CollisionShape" parent="Boundary"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0.6, 0, -0.1 )
shape = SubResource( 5 )

[node name="BackArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="BackArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.0811 )
shape = SubResource( 7 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="BackArea" to="." method="_on_BackArea_body_entered"]
[connection signal="body_exited" from="BackArea" to="." method="_on_BackArea_body_exited"]
